--- a/ShakeMeSilly/Base.lproj/Main.storyboard
+++ b/ShakeMeSilly/Base.lproj/Main.storyboard
@@ -1,14 +1,24 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.19" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.16"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="edosz.ttf">
+            <string>EdoSZ</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ShakeMeSilly" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +26,92 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="beach" translatesAutoresizingMaskIntoConstraints="NO" id="qjA-OP-rhT">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shake Me Silly" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="rfU-4s-4zt">
+                                <rect key="frame" x="16" y="20" width="343" height="147"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="rfU-4s-4zt" secondAttribute="height" multiplier="7:3" id="rqD-9y-jrC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="EdoSZ" family="Edo SZ" pointSize="56"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xva-b3-RLz">
+                                <rect key="frame" x="16" y="181" width="334" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="tT9-oo-xba"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="EdoSZ" family="Edo SZ" pointSize="40"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6N0-Je-GYD">
+                                <rect key="frame" x="20" y="491" width="334" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="xgr-uh-mjE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="EdoSZ" family="Edo SZ" pointSize="40"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Yg-q2-FkO">
+                                <rect key="frame" x="20" y="584" width="334" height="63"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="63" id="VVx-WC-ANY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="EdoSZ" family="Edo SZ" pointSize="30"/>
+                                <state key="normal" title="Start Game">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="startBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3NF-SZ-duN"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Maracas1" translatesAutoresizingMaskIntoConstraints="NO" id="x0s-5k-eKi">
+                                <rect key="frame" x="20" y="269" width="330" height="206"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Xva-b3-RLz" firstAttribute="top" secondItem="rfU-4s-4zt" secondAttribute="bottom" constant="14" id="1NK-pU-JoF"/>
+                            <constraint firstItem="6N0-Je-GYD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="4" id="55t-dh-OqF"/>
+                            <constraint firstAttribute="bottom" secondItem="4Yg-q2-FkO" secondAttribute="bottom" constant="20" id="BcS-ad-gMJ"/>
+                            <constraint firstItem="4Yg-q2-FkO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="4" id="HCi-8Q-9Tn"/>
+                            <constraint firstItem="qjA-OP-rhT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Hic-w3-8CT"/>
+                            <constraint firstAttribute="bottom" secondItem="qjA-OP-rhT" secondAttribute="bottom" id="I4o-C2-gXC"/>
+                            <constraint firstItem="6N0-Je-GYD" firstAttribute="top" secondItem="x0s-5k-eKi" secondAttribute="bottom" constant="16" id="QSx-uj-leA"/>
+                            <constraint firstItem="Xva-b3-RLz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="TND-N4-KAV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="x0s-5k-eKi" secondAttribute="trailing" constant="9" id="XZB-Ma-qTK"/>
+                            <constraint firstAttribute="trailing" secondItem="qjA-OP-rhT" secondAttribute="trailing" id="YFK-8Q-pRM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Xva-b3-RLz" secondAttribute="trailing" constant="9" id="ZLA-RS-W9j"/>
+                            <constraint firstItem="4Yg-q2-FkO" firstAttribute="top" secondItem="6N0-Je-GYD" secondAttribute="bottom" constant="28" id="aMW-LM-Wh5"/>
+                            <constraint firstItem="qjA-OP-rhT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cpg-XD-TEn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6N0-Je-GYD" secondAttribute="trailing" constant="5" id="h0p-gq-f5d"/>
+                            <constraint firstItem="rfU-4s-4zt" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="i2N-P4-KbY"/>
+                            <constraint firstItem="x0s-5k-eKi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="4" id="iAT-8f-vbw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4Yg-q2-FkO" secondAttribute="trailing" constant="5" id="iUQ-NI-y1L"/>
+                            <constraint firstItem="x0s-5k-eKi" firstAttribute="top" secondItem="Xva-b3-RLz" secondAttribute="bottom" constant="23" id="jTI-c2-cjb"/>
+                            <constraint firstItem="rfU-4s-4zt" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="mHd-9A-3da"/>
+                            <constraint firstItem="rfU-4s-4zt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="suG-RN-Z5a"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="x0s-5k-eKi" id="qqz-dh-iPa"/>
+                        <outlet property="scoreLabel" destination="6N0-Je-GYD" id="f68-Qy-DaK"/>
+                        <outlet property="startBtn" destination="4Yg-q2-FkO" id="6OF-ic-cj1"/>
+                        <outlet property="timerLabel" destination="Xva-b3-RLz" id="GR4-nF-cNb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-79.200000000000003" y="137.18140929535232"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Maracas1" width="551" height="743"/>
+        <image name="beach" width="844" height="888"/>
+    </resources>
 </document>
